# apt-method-private

./: .gitignore  Makefile  Makefile.in  README  acquire-method.cpp  acquire-method.h  cipher.cpp  cipher.h  config-file.cpp  config-file.h  config.cpp  config.h  configure.ac  except.h  fetch.cpp  fetch.h  filter.cpp  filter.h  hash.cpp  hash.h  hex.cpp  hex.h  macros.h  main.cpp  origin.cpp  origin.h  private-method.cpp  private-method.h  random.cpp  random.h  stanza.cpp  stanza.h  test.sh  uri.cpp  uri.h
.github/workflows/: test.yml
man/: apt-private-prepare.1  apt-transport-private.8  private.conf.5
tests/: cipher.cpp  cipher.h  config.cpp  config.h  fetch.cpp  fetch.h  filter.cpp  filter.h  hash.cpp  hash.h  hex.cpp  hex.h  main.cpp  origin.cpp  origin.h  stanza.cpp  stanza.h  test.h  uri.cpp  uri.h
tests/files/: config  private.conf  stanzas
tests/files/repo/: b  c  e  f
tools/: encoder.cpp
